# yayo

./: Cargo.toml  LICENSE.txt  README.md  rustfmt.toml
.github/workflows/: continuous-integration-workflow.yml  release-workflow.yml
src/: account.rs  accounts.rs  command.rs  data_file.rs  main.rs  otp.rs
src/command/: add.rs  completion.rs  delete.rs  list.rs  view.rs
