[package]
name = "yayo"
description = "A CLI used to manage and generate OTP (one time password) codes for your accounts"
version = "0.1.2"
authors = ["Jeremy Nicklas <jeremywnicklas@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["yayo", "otp"]
homepage = "https://github.com/nickjer/yayo"
repository = "https://github.com/nickjer/yayo"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keyring = "0.10.0"
directories = "3.0"
data-encoding = "2.3"
ring = "0.16.15"
