[package]
name = "yayo"
description = "Manage and generate OTP (one time password) codes"
version = "0.2.3"
authors = ["Jeremy Nicklas <jeremywnicklas@gmail.com>"]
edition = "2021"
license = "MIT"
keywords = ["yayo", "otp"]
homepage = "https://github.com/nickjer/yayo"
repository = "https://github.com/nickjer/yayo"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["cargo", "derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keyring = "1.1"
directories = "4.0"
data-encoding = "2.3"
ring = "0.16.20"

[profile.release]
lto = true
codegen-units = 1
