[package]
name = "yayo"
description = "Manage and generate OTP (one time password) codes"
version = "0.2.6"
authors = ["Jeremy Nicklas <jeremywnicklas@gmail.com>"]
edition = "2024"
license = "MIT"
keywords = ["yayo", "otp"]
homepage = "https://github.com/nickjer/yayo"
repository = "https://github.com/nickjer/yayo"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["cargo", "derive", "env"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keyring = { version = "3.6", features = ["linux-native-sync-persistent", "crypto-rust", "vendored"] }
directories = "6.0"
data-encoding = "2.3"
ring = "0.17.8"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
